--- a/style.css
+++ b/style.css
@@ -83,22 +83,21 @@ body,html{
   opacity:0.6;
   transform: scale(2);
 }
-
 .playL{
   width:60px;
   height:60px;
-  position: relative;
-  margin-top:-8rem;
-  margin-left:5rem;
+  position: absolute;
+  margin-top:1%;
+  margin-left:7.5%;
   cursor:pointer;
   transition: 0.5s;
 }
 .playR{
   width:60px;
   height:60px;
-  position: relative;
-  margin-bottom:-8rem;
-  margin-right:-5rem;
+  position: absolute;
+  margin-top:9%;
+  margin-left:-7.5%;
   cursor:pointer;
   transition: 0.5s;
 }
