--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Lato&display=swap');
 body,html{
   margin: 5vw 5vw 5vw 5vw;
+  background-color: #ffffff;
   font-family: 'Lato', sans-serif;
-  color:
 }
-.next{
+#next, #before{
   width:15vw;
 }
 .container{
@@ -16,11 +16,12 @@ body,html{
   height:250vh;
   background-color: #f3e2e8;
 }
+
 /* NOTE: CSS for splitting up menu portions */
 .menubox{
   margin:5vw;
 }
-.div1{
+#div1{
   display:grid;
   grid-template-columns: 1fr 2fr;
 }
@@ -32,6 +33,7 @@ body,html{
 }
 .logo img{
   width:100%;
+  height:39vh;
 }
 .logo{
   display: flex;
@@ -50,13 +52,13 @@ body,html{
   color: #df8285;
   border-top: 5px solid #394e6b;
 }
-.div2, .div4{
+#div2, #div4, #div6, #div8{
   display:flex;
   flex-direction: column;
   justify-content: center;
   flex-wrap: wrap;
 }
-.div3, .div5{
+#div3, #div5, #div7, #div9{
   display:flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -122,7 +124,7 @@ body,html{
   width: 40vw;
 }
 /* NOTE: CSS for modals*/
-#yuka, #boki, #steph, #sio{
+.modal{
   position: absolute;
   top:50%;
   left:25%;
@@ -130,12 +132,13 @@ body,html{
   border:none;
   overflow:hidden;
 }
-.modal {
+.modal{
   display: none; /* Hidden by default */
   position: fixed;
   z-index: 1;
   width: 100%;
   height: 100%;
+  background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 .modal iframe{
