just need comments

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Lato&display=swap');
 body,html{
   margin: 5vw 5vw 5vw 5vw;
+  padding:5vw;
   background-color: #ffffff;
-  font-family: 'Lato', sans-serif;
 }
-#next, #before{
+.arrow > img{
   width:15vw;
 }
 .container{
@@ -15,13 +15,16 @@ body,html{
   width: 60vw;
   height:250vh;
   background-color: #f3e2e8;
+  color: #a66e7c;
+  font-family: 'Lato', sans-serif;
 }
 
 /* NOTE: CSS for splitting up menu portions */
 .menubox{
   margin:5vw;
+
 }
-#div1{
+#div1, #div0{
   display:grid;
   grid-template-columns: 1fr 2fr;
 }
@@ -49,7 +52,7 @@ body,html{
   align-items: center;
   font-family: 'Berkshire Swash', cursive;
   font-size: 2.5rem;
-  color: #df8285;
+  color: #a45269;
   border-top: 5px solid #394e6b;
 }
 #div2, #div4, #div6, #div8{
@@ -66,25 +69,32 @@ body,html{
   align-items: center;
 }
 /* NOTE: CSS for images */
-.thumbnail{
+
+.thumbnailR:hover{
+  border-radius:0;
+}
+.thumbnailL:hover{
+  border-radius:0;
+}
+.thumbnailR{
+  display: flex;
+  flex-basis: 35%;
+  justify-content: flex-end;
+  align-items: flex-end;
   padding:1vw;
   width:20vw;
   height:33vh;
   border-radius: 50%;
   transition: 0.5s;
 }
-.thumbnail:hover{
-  border-radius:0;
-}
-#thumbnailR{
-  display: flex;
-  flex-basis: 35%;
-  justify-content: flex-end;
-  align-items: flex-end;
-}
-#thumbnailL{
+.thumbnailL{
   flex-basis: 35%;
   justify-content: flex-start;
+  padding:1vw;
+  width:20vw;
+  height:33vh;
+  border-radius: 50%;
+  transition: 0.5s;
 }
 /* NOTE: CSS for play buttons */
 .playL:hover, .playR:hover{
@@ -119,6 +129,7 @@ body,html{
 }
 .descripL{
   display: flex;
+  flex-direction: column;
   flex-basis: 60%;
   justify-content: center;
   width: 40vw;
