--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body,html{
   justify-content: center;
   align-items: center;
   width: 60vw;
-  height:250vh;
+  height:300vh;
   background-color: #f3e2e8;
   color: #a66e7c;
   font-family: 'Lato', sans-serif;
@@ -22,7 +22,6 @@ body,html{
 /* NOTE: CSS for splitting up menu portions */
 .menubox{
   margin:5vw;
-
 }
 #div1, #div0{
   display:grid;
@@ -59,13 +58,13 @@ h4{
   font-family: 'Berkshire Swash', cursive;
   color: #a45269;
 }
-#div2, #div4, #div6, #div8{
+#div2, #div4, #div55, #div6, #div8, #div10{
   display:flex;
   flex-direction: column;
   justify-content: center;
   flex-wrap: wrap;
 }
-#div3, #div5, #div7, #div9{
+#div3, #div5, #div7, #div9 {
   display:flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -162,11 +161,12 @@ h4{
   height:60%;
   width:60%;
 }
-.comment1s, .comment2s {
+.comment1s, .comment2s, .comment3s, .comment4s{
+  font-size: 0.7rem;
   background-color: #f8f8f8;
   border: 1px solid #c8c8c8;
   border-radius: 10px;
-  width: 20vw;
-  padding: 0.5vw;
-  margin-top: 2vw;
+  width: 28vw;
+  padding: 0.2vw;
+  margin-top: 1.2vw;
 }
