--- a/style.css
+++ b/style.css
@@ -215,12 +215,12 @@ h4{
   justify-content: space-around;
   align-items:center;
 }
+/* NOTE: CSS for about page */
 .Acontainer{
   display:flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 60vw;
   padding:5vw;
   background-color: #f3e2e8;
   color: #a66e7c;
@@ -254,8 +254,8 @@ span{
 }
 .whyPic{
   margin-right: 1vw;
-  width:20vw;
-  height:30vh;
+  width:15vw;
+  height:25vh;
 }
 .why{
   display: flex;
@@ -267,4 +267,24 @@ span{
   justify-content: center;
   align-items: center;
   margin-bottom: 1vw;
+}
+.how{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.howPic{
+  margin: 1.25vw;
+  width:30vw;
+  height:30vh;
+}
+ul {
+  list-style: none;
+}
+ul li::before {
+  content: "\2680";  /* CSS Code/unicode for bullet */
+  color: #394e6b;
+  display: inline-block; /* Needed to add space between the bullet and the text */
+  width: 1em; /* Also needed for space (tweak if needed) */
+  margin-left: -1em; /* Also needed for space (tweak if needed) */
 }
