--- a/style.css
+++ b/style.css
@@ -4,20 +4,25 @@ body,html{
   margin: 5vw 5vw 5vw 5vw;
   padding:5vw;
 }
+.container{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height:300vh;
+  background-color: #f3e2e8;
+  color: #a66e7c;
+  font-family: 'Lato', sans-serif;
+}
 .watch1{
   display: flex;
   flex-direction: column;
   align-self: flex-end;
   padding: 1vw;
 }
-@-webkit-keyframes hvr-pulse-grow {
-  to {
-    -webkit-transform: scale(1.15);
-    transform: scale(1.15);
-  }
-}
+/* NOTE: animation for arrows to other pages, learnt from https://github.com/IanLunn/Hover */
 @keyframes hvr-pulse-grow {
-  to {
+  to{
     -webkit-transform: scale(1.15);
     transform: scale(1.15);
   }
@@ -32,27 +37,15 @@ body,html{
   opacity:1;
   cursor: pointer;
   -webkit-animation-name: hvr-pulse-grow;
- animation-name: hvr-pulse-grow;
- -webkit-animation-duration: 0.4s;
- animation-duration: 0.4s;
- -webkit-animation-timing-function: linear;
- animation-timing-function: linear;
- -webkit-animation-iteration-count: infinite;
- animation-iteration-count: infinite;
- -webkit-animation-direction: alternate;
- animation-direction: alternate;
-}
-
-.container{
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 60vw;
-  height:300vh;
-  background-color: #f3e2e8;
-  color: #a66e7c;
-  font-family: 'Lato', sans-serif;
+  animation-name: hvr-pulse-grow;
+  -webkit-animation-duration: 0.4s;
+  animation-duration: 0.4s;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+  animation-direction: alternate;
 }
 
 /* NOTE: CSS for splitting up menu portions */
@@ -229,6 +222,7 @@ h4{
   border-bottom: 5px dotted #394e6b;
   padding:0.5vw;
 }
+/* NOTE: code for about page, animation on korean mukbang word */
 #korean{
   display: flex;
   font-size: 5rem;
@@ -251,8 +245,8 @@ span{
 }
 .whyPic{
   margin-right: 1vw;
-  width:15vw;
-  height:25vh;
+  width:22vw;
+  height:28vh;
 }
 .why{
   display: flex;
@@ -264,6 +258,7 @@ span{
   justify-content: center;
   align-items: center;
   margin-bottom: 1vw;
+  padding:0 4vw 0 4vw;
 }
 .how{
   display: flex;
